# AIDAGuard

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: deploy-docs.yml  release.yml
crates/aidaguard-core/: Cargo.toml
crates/aidaguard-core/examples/: mock_sse.rs
crates/aidaguard-core/src/: config.rs  engine.rs  entity.rs  error.rs  lib.rs  main.rs  storage_trait.rs  storage_types.rs
crates/aidaguard-core/src/detector/: mod.rs  versioned.rs
crates/aidaguard-core/src/proxy/: forwarder.rs  mod.rs  server.rs  stream.rs
crates/aidaguard-core/src/replacer/: mod.rs
crates/aidaguard-core/src/storage/: mod.rs
crates/aidaguard-detector/: Cargo.toml
crates/aidaguard-detector/src/: lib.rs  pipeline.rs
crates/aidaguard-detector/src/anonymizer/: encrypt.rs  hash.rs  mask.rs  mod.rs  replace.rs
crates/aidaguard-detector/src/core/: confidence.rs  mod.rs  recognizer.rs  recognizer_registry.rs  result.rs
crates/aidaguard-detector/src/recognizers/: mod.rs
crates/aidaguard-detector/src/recognizers/nlp/: engine.rs  mapping.rs  mod.rs  registry.rs
crates/aidaguard-detector/src/recognizers/pattern/: amount.rs  api_key.rs  aws_access_key.rs  bank_account.rs  car_plate.rs  credit_card.rs  crypto_address.rs  email.rs  iban.rs  id_card_cn.rs  ip_address.rs  jwt.rs  mac_address.rs  mod.rs  passport_cn.rs  pattern_recognizer.rs  phone.rs  private_key.rs  swift_code.rs  uk_nino.rs  url.rs  us_ssn.rs  yaml_recognizer.rs
crates/aidaguard-detector/src/validation/: context.rs  iban.rs  id_card_cn.rs  luhn.rs  mod.rs  mod_n.rs  registry.rs
crates/aidaguard-detector/tests/: anonymizer_tests.rs  detector_pipeline.rs  detector_validation.rs  nlp_e2e.rs  recognizer_result_tests.rs  recognizer_tests.rs  rules_load.rs
crates/aidaguard-plugins/: Cargo.toml
crates/aidaguard-plugins/manifests/: claude_code.json  claudedesktop.json  cline.json  codeium.json  codexdesktop.json  cody.json  coffeecli.json  continue.json  cursor.json  geminidesktop.json  grok.json  nanobot.json  openclaw.json  opencode.json  openfang.json  pi.json  picoclaw.json  qwencode.json  tabnine.json  trae.json  traecn.json  vscode.json  windsurf.json  zed.json  zeroclaw.json
crates/aidaguard-plugins/src/: abi.rs  backup.rs  lib.rs  loader.rs  registry.rs
crates/aidaguard-plugins/src/adapters/: aider.rs  claude_code.rs  cline.rs  codeium.rs  codewhisperer.rs  codex.rs  cody.rs  continue_dev.rs  copilot.rs  cursor.rs  gemini.rs  hermes_agent.rs  jetbrains_ai.rs  mod.rs  openclaw.rs  opencode.rs  roo_code.rs  tabnine.rs  windsurf.rs  zed.rs
crates/aidaguard-plugins/src/declarative/: engine.rs  json_path.rs  loader.rs  manifest.rs  mod.rs
crates/aidaguard-proxy/: Cargo.toml
crates/aidaguard-proxy/src/: forwarder.rs  lib.rs  server.rs  stream.rs  wire_api.rs
crates/aidaguard-storage/: Cargo.toml
crates/aidaguard-storage/src/: factory.rs  lib.rs  memory.rs
crates/aidaguard-tauri/src/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
crates/aidaguard-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/aidaguard-tauri/src-tauri/capabilities/: default.json
crates/aidaguard-tauri/src-tauri/icons/: icon.icns
crates/aidaguard-tauri/src-tauri/src/: events.rs  lib.rs  main.rs  state.rs  tray.rs
crates/aidaguard-tauri/src-tauri/src/commands/: audit.rs  config.rs  mod.rs  proxy.rs  rules.rs  tools.rs  upstream.rs
crates/aidaguard-tauri/src-tauri/src/tools/: backup.rs  mod.rs  registry.rs
crates/aidaguard-tauri/src-tauri/src/tools/adapters/: aider.rs  claude_code.rs  cline.rs  codex.rs  continue_dev.rs  cursor.rs  gemini.rs  hermes_agent.rs  mod.rs  openclaw.rs  opencode.rs  roo_code.rs  windsurf.rs  zed.rs
crates/aidaguard-tauri/src/src/: App.css  App.tsx  globals.css  main.tsx
crates/aidaguard-tauri/src/src/api/: audit.ts  config.ts  events.ts  proxy.ts  rules.ts  tools.ts  (+1 more)
crates/aidaguard-upstream/: Cargo.toml
crates/aidaguard-upstream/src/: client.rs  lib.rs  manager.rs  provider.rs  types.rs
crates/aidaguard-upstream/src/providers/: anthropic.yaml  deepseek.yaml  gemini.yaml  groq.yaml  openai.yaml  qwen.yaml  zhipu.yaml
docs/: AI_TOOLS_ADAPTERS.md  AI_TOOLS_DOCUMENT_ANALYSIS.md  ARCHITECTURE.md  CORE_ARCHITECTURE_POSITION.md  CORE_MODULE_ANALYSIS.md  DETECTION_ENGINE_TRAIT_PLAN.md  DEVELOPMENT.md  ERROR_HANDLING_PLAN.md  LLM_DOCUMENT_PROCESSING_ANALYSIS.md  LLM_PROVIDERS_API.md  PHASE3_FINAL_PLAN.md  PHASE3_IMPLEMENTATION.md  PHASE3_PLAN.md  PHASE3_REVISED_PLAN.md  PHASE3_WORK_BREAKDOWN.md  PLUGIN_DYNAMIC_LOADING_PLAN.md  README.md  RULES_OPTIMIZATION_PLAN.md  UI_DESIGN.md  WORKLOG.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/archived/: LLM_PROVIDERS_DETAILED.md
docs/archived/plans/: ARCHITECTURE_OPTIMIZATION.md  AUDIT_STORAGE_TRAIT_PLAN.md  DEPENDENCY_REFACTORING.md  PHASE4_PLAN.md
docs/reference/: adapter-architecture.md  custom-agent-config.md  echobird-reference.md  llm-providers.md
rules/: cn.yaml  core.yaml  eu.yaml  finance.yaml  gb.yaml  general.yaml  medical.yaml  us.yaml
rules/cn/: finance.yaml  general.yaml  medical.yaml  personal.yaml
rules/domains/: enterprise.yaml  medical.yaml
rules/eu/: finance.yaml  general.yaml
rules/gb/: general.yaml
rules/global/: credentials.yaml  finance.yaml  identifiers.yaml
rules/regions/: cn.yaml  gb.yaml  us.yaml
rules/us/: finance.yaml  general.yaml  medical.yaml
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: core_audit_filter.rs  core_detector.rs  core_engine.rs  core_error.rs  core_replacer.rs  core_types_config.rs  core_types_entity.rs  core_types_match.rs  core_types_rule.rs  plugins_adapters.rs  plugins_declarative.rs  plugins_registry.rs  proxy_forwarder.rs  proxy_server.rs  proxy_stream.rs  storage_db.rs  storage_factory.rs  upstream_client.rs  upstream_manager.rs  upstream_provider.rs  upstream_types.rs
tools-backup/cline/: README.md  openrouter_models.json  vscode_settings.json
(+30 files in other folders)
