[workspace]
resolver = "2"

members = [
    "crates/aidaguard-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aidaguard Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/aidaguard"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 服务器
axum = "0.7"

# HTTP 客户端
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }

# 正则检测
regex = "1"
once_cell = "1"
aho-corasick = "1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# 流处理
futures = "0.3"

# 文件监听（规则热加载）
notify = "6"

# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }

# 加密
aes-gcm = "0.10"
keyring = "2"

# UUID
uuid = { version = "1", features = ["v4"] }

# 错误处理
anyhow = "1"
thiserror = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
