[workspace]
resolver = "2"

members = [
    "crates/aidaguard-core",
    "crates/aidaguard-tauri/src-tauri",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Aidaguard Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/aidaguard"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 服务器
axum = "0.7"

# HTTP 客户端
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }

# 正则检测
regex = "1"
once_cell = "1"
aho-corasick = "1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# 流处理
futures = "0.3"

# 文件监听（规则热加载）
notify = "6"

# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }

# 加密
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.8"
keyring = "2"

# UUID
uuid = { version = "1", features = ["v4"] }

# 错误处理
anyhow = "1"
thiserror = "1"

# 加密哈希
sha2 = "0.10"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tauri 桌面应用
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = "2"
tokio-util = "0.7"
csv = "1.3"
