[package]
name = "aidaguard-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core engine for Aidaguard: proxy, detection, replacement, and storage"

[dependencies]
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
regex.workspace = true
once_cell.workspace = true
aho-corasick.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
futures.workspace = true
notify.workspace = true
rusqlite.workspace = true
aes-gcm.workspace = true
keyring.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "aidaguard"
path = "src/main.rs"
