[package]
name = "aidaguard-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core engine for Aidaguard: config, detection, replacement, types, and engine"

[dependencies]
aidaguard-storage = { path = "../aidaguard-storage" }
tokio.workspace = true
regex.workspace = true
serde.workspace = true
serde_yaml.workspace = true
toml.workspace = true
notify.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
