[package]
name = "aidaguard-detector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aidaguard detection engine with regex, checksum validation, context scoring, and optional NLP NER"

[features]
default = []
nlp = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub", "dep:dirs"]

[dependencies]
aidaguard-core = { path = "../aidaguard-core" }
regex.workspace = true
rayon = "1.10"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
rand.workspace = true
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }

[[test]]
name = "anonymizer_tests"

[[test]]
name = "recognizer_result_tests"
