[package]
name = "aidaguard-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aidaguard encrypted audit storage (SQLite + AES-256-GCM)"

[dependencies]
aidaguard-core = { path = "../aidaguard-core" }
tracing.workspace = true
anyhow.workspace = true
aes-gcm.workspace = true
rusqlite.workspace = true
serde.workspace = true
sha2.workspace = true
uuid.workspace = true
pbkdf2.workspace = true
rand.workspace = true
tokio.workspace = true
dirs.workspace = true
