[package]
name = "aidaguard-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aidaguard desktop client built with Tauri"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-notification = "2"
tokio-util.workspace = true
aidaguard-core = { path = "../../aidaguard-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
notify.workspace = true
csv.workspace = true
serde_yaml.workspace = true
regex.workspace = true
reqwest.workspace = true
